Fixed the problem that the links at the top of the page when you were signed out were ugly and not even legible and the background image was showing through above the header.
Increased head room on the logo.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,20 @@
+/*------------------------------------------------------------------------------------------------*/
+/* Layout-specific */
+
+#above_header {
+  background: white;
+}
+#above_header ul {
+  margin: 0;
+}
+#above_header ul li {
+  list-style: none;
+  display: inline;
+}
+
+
+/*------------------------------------------------------------------------------------------------*/
+/* General */
 label {
   font-weight: bold;
 }
